# tacita-impl

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: cli_usage.md  mklhts_status.md  refactor_notes.md  ste_api.md  tacita_api.md  tacita_architecture.md
hints/: Cargo.toml
hints/src/: aggregate.rs  kzg.rs  lib.rs  main.rs  protocol.rs  prove.rs  setup.rs  signer.rs  types.rs  verify.rs
ste/: Cargo.toml
ste/examples/: legacy_ste_bench.rs
ste/src/: aggregate.rs  aggregation.rs  bench.rs  crs.rs  decryption.rs  encryption.rs  final_decryption.rs  lib.rs  main.rs  partial_decryption.rs  setup.rs  utils.rs  utils2.rs
tacita/: Cargo.toml
tacita/src/: client.rs  committee.rs  config.rs  errors.rs  lib.rs  local.rs  primitives.rs  server.rs  simulator.rs  types.rs
tacita/tests/: single_process_round.rs
