[package]
name = "ste"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
rand = "0.9.2"
criterion = { version = "0.5.0", features = ["html_reports"] }
ark-std = { version = "0.5.0", features = ["print-trace"] }
serde = { version = "1.0.130", features = ["derive"] }
rayon = { version = "1.5.1" }
bincode = { version = "1.3" }

hopcroft-karp = { git = "https://github.com/microgravitas/hopcroft-karp" }

sha2 = { version = "0.10.5" }