[package]
name = "tacita"
version = "0.1.0"
edition = "2021"

[dependencies]
hints = { path = "../hints" }
ste = { path = "../ste" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
ark-bls12-381 = "0.5.0"
ark-bls12-381-04 = { package = "ark-bls12-381", version = "0.4.0" }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-serialize-04 = { package = "ark-serialize", version = "0.4.0" }
ark-std = "0.5.0"
rand08 = { package = "rand", version = "0.8" }
sha2 = "0.10"
bincode = "1.3"
